# openQ4-game

./: README.md  meson_options.txt
debian/: changelog  control  copyright  openq4-game.docs  openq4-game.install  openq4-game.metainfo.xml  rules
src/: meson.build
src/framework/: CVarSystem.h  UsercmdGen.h
src/game/: AF.cpp  AF.h  AFEntity.cpp  Actor.cpp  Effect.cpp  Entity.cpp  Game_local.cpp  Game_local.h  Game_render.cpp  Mover.cpp  MultiplayerGame.cpp  Player.cpp  Player.h  Pvs.cpp  Weapon.cpp
src/game/ai/: AAS.cpp  AAS_routing.cpp  AI.cpp  AI_events.cpp  Monster_StroggFlyer.cpp  Monster_StroggHover.cpp
src/game/anim/: Anim_Blend.cpp  Anim_Import.cpp
src/game/client/: ClientEntity.cpp
src/game/gamesys/: Event.cpp  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
src/game/physics/: Clip.cpp  Physics_AF.cpp  Physics_Base.cpp  Physics_RigidBody.cpp  Physics_RigidBody.h  Physics_StaticMulti.cpp  Physics_VehicleMonster.cpp  Push.cpp
src/game/script/: Script_Program.cpp
src/game/vehicle/: VehicleAnimated.cpp  VehicleParts.cpp  VehicleSpline.cpp
src/idlib/: Heap.cpp  Heap.h  rvHeap.cpp  rvMemSys.cpp
src/idlib/containers/: Queue.h
src/idlib/math/: Matrix.h  Simd.cpp  Vector.h
src/mpgame/: AF.cpp  Actor.cpp  Game_local.cpp  Game_local.h  MultiplayerGame.cpp  Player.cpp  Pvs.cpp  Pvs.h  Weapon.cpp
src/mpgame/ai/: AAS_routing.cpp  Monster_StroggFlyer.cpp  Monster_StroggHover.cpp
src/mpgame/anim/: Anim_Import.cpp
src/mpgame/gamesys/: Event.cpp  SysCmds.cpp
src/mpgame/physics/: Clip.cpp  Physics_AF.cpp  Physics_AF.h  Physics_RigidBody.cpp  Physics_VehicleMonster.cpp  Push.cpp
src/mpgame/script/: Script_Program.cpp
src/mpgame/vehicle/: VehicleParts.cpp
src/renderer/: RenderSystem.h
src/sys/: sys_public.h
